[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Daniel Kats <daniel.kats@nortonlifelock.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
pyarrow = "^6.0.1"
tqdm = "^4.62.3"
numpy = "^1.22.1"
autopep8 = "^1.6.0"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
